# real_time_chat

./: .env.dev  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  test.db
 tests/: conftest.py  test_auth.py  test_chat.py
alembic/: env.py
alembic/versions/: bc712ea6e88f_initial_migration.py
real_time_chat/: config.py  containers.py  database.py  dependencies.py  main.py
real_time_chat/api/: auth.py  chat.py
real_time_chat/models/: message.py  room.py  users.py
real_time_chat/repositories/: message_repository.py  room_repository.py  user_repository.py
real_time_chat/schemas/: messages.py  room.py  users.py
real_time_chat/services/: auth_service.py  chat_service.py
real_time_chat/uow/: unit_of_work.py
real_time_chat_frontend/: app.js  index.html  styles.css
